tests/dataset/tpc-ds/compiler/kotlin/q93.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q93.kt:42:12: error: redeclaration: Reason
data class Reason(var r_reason_sk: Int, var r_reason_desc: String)
           ^
/tmp/q93.kt:44:12: error: redeclaration: Reason
data class Reason(var r_reason_sk: Int, var r_reason_desc: String)
           ^
